Fix shit when scrollbar appears
Always show the scrollbar.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html {
+	/* Scrollbar always on. This avoid the horizontal
+	 * shift when moving from a page that needs
+	 * scrolling to a page that doesni't.*/
+	overflow-y: scroll;
+}
+
 body {
 	font-family: 'Courier Prime';
 	margin: 10px;
